--- a/react-basics/react-basics_hello-world/package.json
+++ b/react-basics/react-basics_hello-world/package.json
@@ -9,13 +9,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.12",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite-plugin-eslint": "^1.8.1",
-    "@vitejs/plugin-react": "^4.2.1"
+    "vite": "^5.4.2",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
     "dev": "vite",
