--- a/react-basics/react-props/react-props_greeting/package.json
+++ b/react-basics/react-props/react-props_greeting/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite": "^5.0.12"
+    "vite": "^5.4.2",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
